--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -88,12 +88,12 @@ h3, h4, h5, h6 {
 }
 
 a {
-  color:#39c;
+  color:#dca80e;
   text-decoration:none;
 }
 
 a:hover {
-  color:#069;
+  color:#926f09;
 }
 
 a small {
@@ -326,10 +326,4 @@ footer {
     color:#444;
   }
 }
-header ul {
-   display:none;
-	 }
 
-header p.view {
-   display:none;
-}
